--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-		"build": "npx tsc",
-		"start": "node dist/index.js",
-		"client": "npm run dev --prefix client",
-		"server": "concurrently \"npx tsc --watch\" \"nodemon --ignore client/ -q dist/index.js\"",
-		"dev": "concurrently \"npm run server\" \"npm run client\"",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "client": "npm run dev --prefix client",
+    "server": "concurrently \"npx tsc --watch\" \"nodemon --ignore client/ -q dist/index.js\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/EduardKuun/broccoli.git"
@@ -32,8 +32,10 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
     "nodemon": "^2.0.20",
     "typescript": "^4.8.4"
