--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,10 @@
 		"@tsconfig/svelte": "^2.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.43.0",
 		"@typescript-eslint/parser": "^5.43.0",
+		"axios": "^1.1.3",
 		"carbon-components-svelte": "^0.70.12",
+		"carbon-icons-svelte": "^11.4.0",
+		"carbon-pictograms-svelte": "^12.2.0",
 		"eslint": "^8.27.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.7.1",
@@ -33,7 +36,6 @@
 		"typescript": "^4.0.0"
 	},
 	"dependencies": {
-		"axios": "^1.1.3",
 		"sirv-cli": "^2.0.0"
 	}
 }
